-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.2.0-rc1
-
None
-
Windows
-
cd30304685e45c270f073412d38e279e1921b3d5
Following 0afcbaa9c8840444e2c17e26f7b5b61d877aaff2, source files that appear in an inactive scope in a qmake project are not indexed.
Attached a minimal project that reproduces the bug. Open foo.cpp, and try to Find Usages on func. It won't find the one in bar.cpp.
According to the commit message, this only affect Windows. I didn't try on linux though.
| For Gerrit Dashboard: QTCREATORBUG-17214 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 175557,2 | fix cumulative qmake evaluation in debug_and_release configs | 4.2 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |