fix cumulative qmake evaluation in debug_and_release configs

don't fail to make the build pass evaluator cumulative as well.

Task-number: QTCREATORBUG-17214
Change-Id: I217578b7d29d0dcf9ef63c954ec403412812c70c
Reviewed-by: Orgad Shaneh <orgads@gmail.com>